<resources>
    <string name="app_name">MovieMemos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_menu_item_title_seen">已看</string>
    <string name="drawer_menu_item_titile_want">想看</string>
    <string name="drawer_menu_item_title_tag">标签</string>
    <string name="drawer_menu_item_title_douban_top250">豆瓣TOP250</string>
    <string name="drawer_menu_item_title_settings">设置</string>
    <string name="drawer_menu_item_title_nightmode">夜间模式</string>
    <string name="no_result">没有符合条件的结果</string>
    <string name="add_memo_hint">请点击 + 添加记录</string>
    <string name="search_hint">搜索影片名称、导演、演员、编剧</string>
    <string name="before_search">数据由 豆瓣电影 提供</string>
    <string name="summary">简介</string>
    <string name="director">导演</string>
    <string name="cast">主演</string>
    <string name="fragment_title_search">搜索</string>
    <string name="transition_name_poster">img</string>
    <string name="transition_name_title">title</string>
    <string name="add_to_seen">添加记录</string>
    <string name="add_to_want">加入想看</string>
    <string name="add_tag">添加标签</string>
    <string name="TV_tag">TV</string>
    <string name="etc">等</string>
    <string name="movie_item_not_available">当前无法获取该影视作品信息</string>
    <string name="no_raing">暂无评分</string>
    <string name="TV_Chinese_tag">电视剧</string>
    <string name="total">共</string>
    <string name="season">季</string>
    <string name="this_season">本季</string>
    <string name="episode">集</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="viewing_date">观影日期</string>
    <string name="viewing_date_hint">选择观影日期</string>
    <string name="viewing_way">观影方式</string>
    <string name="short_comment">短评</string>
    <string name="viewing_version">观影版本</string>
    <string name="viewing_mood">观影状态</string>
    <string name="tag">标签</string>
    <string name="tag_hint">添加标签</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="cinema">电影院</string>
    <string name="download">下载</string>
    <string name="dvd">DVD</string>
    <string name="online">在线观看</string>
    <string name="tv">电视台</string>
    <string name="normal">普通</string>
    <string name="imax">IMAX</string>
    <string name="dmax">中国巨幕</string>
    <string name="other">其他</string>
    <string name="_2d">2D</string>
    <string name="_3d">3D</string>
    <string name="public_release">公映版</string>
    <string name="directors_cut">导演剪辑版</string>
    <string name="extended_edition">加长版</string>
    <string name="movie_version">电影版本</string>
    <string name="viewing_date_tv">结束日期</string>
    <string name="viewing_date_hint_tv">请选择结束观看的日期</string>
    <string name="viewing_way_tv">观看方式</string>
    <string name="story">故事</string>
    <string name="visual">视觉</string>
    <string name="aural">听觉</string>
    <string name="save_success">保存成功</string>
    <string name="save_failure">保存失败</string>
    <string name="no_short_comment">暂无短评</string>
    <string name="movie_memo">观影记录</string>
    <string name="tiao">条</string>
    <string name="rating">评分</string>
    <string name="subitem_rating">分项评分</string>
    <string name="good">好</string>
    <string name="average">中</string>
    <string name="bad">差</string>
    <string name="movie_detail">影片详情</string>
    <string name="edit_memo">修改记录</string>
    <string name="delete_memo">删除记录</string>
    <string name="delete_memo_message">要删除该观影记录吗？</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="welcome_title">欢迎使用电影手账</string>
    <string name="welcome_detail_item_search_movie">查询影视作品信息</string>
    <string name="welcome_detail_item_record_want">备忘你想看的影视作品</string>
    <string name="welcome_detail_item_record_seen">记录、评价你曾经看过的影视作品</string>
    <string name="welcome_hint">点击右下的“ + ”号搜索查看想要的影视作品信息，然后添加到记录中</string>
    <string name="exit_by_2_click_hint">再按一次退出程序</string>
    <string name="have_loaded_all">已加载全部</string>
    <string name="movie_search_not_available">当前无法获取影视搜索数据</string>
</resources>
