<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="memo"
            type="com.zk.moviememos.po.Memo" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/block_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="2"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:paddingLeft="6dp"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/ll_viewing_date"
                    style="@style/memo_detail_item_background">

                    <TextView
                        android:id="@+id/tv_viewing_date_title"
                        style="@style/item_title"
                        android:text="@string/viewing_date" />

                    <TextView
                        android:id="@+id/tv_viewing_date"
                        style="@style/item_content"
                        android:text="@{memo.viewingDateStr}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_viewing_way"
                    style="@style/memo_detail_item_background">

                    <TextView
                        android:id="@+id/tv_viewing_way_title"
                        style="@style/item_title"
                        android:text="@string/viewing_way" />

                    <TextView
                        android:id="@+id/tv_viewing_way"
                        style="@style/item_content"
                        android:text="@{memo.viewingWayStr}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_viewing_version"
                    style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:text="@string/viewing_version" />

                    <TextView
                        android:id="@+id/tv_viewing_version1"
                        style="@style/item_content"
                        android:text="@{memo.viewingVersion1Str}" />

                    <TextView
                        android:id="@+id/tv_viewing_version2"
                        style="@style/item_content"
                        android:text="@{memo.viewingVersion2Str}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_movie_version"
                    style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:text="@string/movie_version" />

                    <TextView
                        android:id="@+id/tv_movie_version"
                        style="@style/item_content"
                        android:text="@{memo.movieVersionStr}" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_viewing_mood"
                    style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:text="@string/viewing_mood" />

                    <TextView
                        android:id="@+id/tv_viewing_mood"
                        style="@style/item_content"
                        android:text="@{memo.viewingMoodStr}" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/block_background"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:divider="?android:attr/listDivider"
                android:orientation="vertical"
                android:paddingLeft="4dp"
                android:showDividers="middle">

                <LinearLayout
                    style="@style/memo_detail_item_background"
                    android:layout_height="76dp">

                    <TextView
                        style="@style/item_title"
                        android:layout_width="46dp"
                        android:text="@string/rating" />

                    <TextView
                        android:id="@+id/tv_average_score"
                        style="@style/item_content"
                        android:textColor="?colorAccent"
                        android:textSize="22sp"
                        android:text="@{memo.averageScoreStr}" />
                </LinearLayout>

                <LinearLayout style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:layout_width="46dp"
                        android:text="@string/story" />

                    <TextView
                        android:id="@+id/tv_story_score"
                        style="@style/item_content"
                        android:textColor="?colorAccent"
                        android:text="@{memo.storyScoreStr}" />
                </LinearLayout>

                <LinearLayout style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:layout_width="46dp"
                        android:text="@string/visual" />

                    <TextView
                        android:id="@+id/tv_visual_score"
                        style="@style/item_content"
                        android:textColor="?colorAccent"
                        android:text="@{memo.visualScoreStr}" />

                </LinearLayout>

                <LinearLayout style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:layout_width="46dp"
                        android:text="@string/aural" />

                    <TextView
                        android:id="@+id/tv_aural_score"
                        style="@style/item_content"
                        android:textColor="?colorAccent"
                        android:text="@{memo.auralScoreStr}" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/block_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/listDivider"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:id="@+id/ll_short_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout style="@style/memo_detail_item_background">

                    <TextView
                        style="@style/item_title"
                        android:layout_width="44dp"
                        android:text="@string/short_comment" />
                </LinearLayout>

                <TextView
                    android:id="@+id/et_short_comment"
                    style="@style/item_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:lineSpacingMultiplier="1.3"
                    android:textSize="15sp"
                    android:text="@{memo.shortComment}" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>